# marky-trader

./: .gitignore  1  README.md  actor.py  actor_critic.py  custom_downloader.py  downloader.py  dqn.py  dynamic_data.py  epsilon.py  foramt_df.py  main.py  metrics.py  preprocess.py  pyproject.toml  reader.py  renderer.py  utils.py
