[tool.poetry]
name = "trader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
huggingface-hub = "^0.22.2"
torch = "^2.2.2"
gym-trading-env = "^0.3.3"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
pyecharts = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
