[tool.poetry]
name = "marky-trader"
version = "0.1.0"
description = ""
authors = ["Bozhko Daniil <voc.offacc@gmail.com>"]
readme = "README.md"
packages = [{include = "marky_trader"}]

[tool.poetry.dependencies]
python = "^3.11"
gym-trading-env = "^0.3.3"
torch = "^2.3.0"
matplotlib = "^3.8.4"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
